# Rust-Session

./: LICENSE  README.md
session-1/: Cargo.toml
session-1/src/: error.rs  main.rs  mongo.rs
session-1/src/model/: mod.rs  person.rs
